--- a/ia/index.html
+++ b/ia/index.html
@@ -423,9 +423,8 @@
 
                     case false:
 
-                        // Evaluamos la claridad y la oscuridad, por separado, para imprimir su respectivo exceso
+                        // No se hace algo
 
-                        lighter >= 9 || darker >= 30 ? createBars("B&W") : false;
                     break;
 
                     default:
