--- a/ia/index.html
+++ b/ia/index.html
@@ -9,166 +9,11 @@
 
         <meta name="color-scheme" content="dark">
 
+        <link rel="stylesheet" href="style.css">
+
         <script src="ia/browser.js"></script>
 
         <title> Inteligencia Artificial </title>
-
-        <style>
-
-            :root{
-                --bckgrnd: #505767;
-            }
-
-            *{
-                font-family: "Segoe UI", "Roboto", arial, sans-serif;
-                font-size: 20px;
-                line-height: 1.25;
-                padding: 0;
-                margin: 0;
-                border: none;
-                box-sizing: border-box;
-                color: #ddd;
-                outline: none;
-                user-select: none;
-                -webkit-user-drag: none;
-            }
-
-            html{
-                height: 100%;
-                background-color: var(--bckgrnd);
-                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 304 304' width='304' height='304'%3E%3Cpath fill='%23f7f7a7' fill-opacity='0.4' d='M44.1 224a5 5 0 1 1 0 2H0v-2h44.1zm160 48a5 5 0 1 1 0 2H82v-2h122.1zm57.8-46a5 5 0 1 1 0-2H304v2h-42.1zm0 16a5 5 0 1 1 0-2H304v2h-42.1zm6.2-114a5 5 0 1 1 0 2h-86.2a5 5 0 1 1 0-2h86.2zm-256-48a5 5 0 1 1 0 2H0v-2h12.1zm185.8 34a5 5 0 1 1 0-2h86.2a5 5 0 1 1 0 2h-86.2zM258 12.1a5 5 0 1 1-2 0V0h2v12.1zm-64 208a5 5 0 1 1-2 0v-54.2a5 5 0 1 1 2 0v54.2zm48-198.2V80h62v2h-64V21.9a5 5 0 1 1 2 0zm16 16V64h46v2h-48V37.9a5 5 0 1 1 2 0zm-128 96V208h16v12.1a5 5 0 1 1-2 0V210h-16v-76.1a5 5 0 1 1 2 0zm-5.9-21.9a5 5 0 1 1 0 2H114v48H85.9a5 5 0 1 1 0-2H112v-48h12.1zm-6.2 130a5 5 0 1 1 0-2H176v-74.1a5 5 0 1 1 2 0V242h-60.1zm-16-64a5 5 0 1 1 0-2H114v48h10.1a5 5 0 1 1 0 2H112v-48h-10.1zM66 284.1a5 5 0 1 1-2 0V274H50v30h-2v-32h18v12.1zM236.1 176a5 5 0 1 1 0 2H226v94h48v32h-2v-30h-48v-98h12.1zm25.8-30a5 5 0 1 1 0-2H274v44.1a5 5 0 1 1-2 0V146h-10.1zm-64 96a5 5 0 1 1 0-2H208v-80h16v-14h-42.1a5 5 0 1 1 0-2H226v18h-16v80h-12.1zm86.2-210a5 5 0 1 1 0 2H272V0h2v32h10.1zM98 101.9V146H53.9a5 5 0 1 1 0-2H96v-42.1a5 5 0 1 1 2 0zM53.9 34a5 5 0 1 1 0-2H80V0h2v34H53.9zm60.1 3.9V66H82v64H69.9a5 5 0 1 1 0-2H80V64h32V37.9a5 5 0 1 1 2 0zM101.9 82a5 5 0 1 1 0-2H128V37.9a5 5 0 1 1 2 0V82h-28.1zm16-64a5 5 0 1 1 0-2H146v44.1a5 5 0 1 1-2 0V18h-26.1zm102.2 270a5 5 0 1 1 0 2H98v14h-2v-16h124.1zM242 149.9V160h16v34h-16v62h48v48h-2v-46h-48v-66h16v-30h-16v-12.1a5 5 0 1 1 2 0zM53.9 18a5 5 0 1 1 0-2H64V2H48V0h18v18H53.9zm112 32a5 5 0 1 1 0-2H192V0h50v2h-48v48h-28.1zm-48-48a5 5 0 0 1-9.8-2h2.07a3 3 0 1 0 5.66 0H178v34h-18V21.9a5 5 0 1 1 2 0V32h14V2h-58.1zm0 96a5 5 0 1 1 0-2H137l32-32h39V21.9a5 5 0 1 1 2 0V66h-40.17l-32 32H117.9zm28.1 90.1a5 5 0 1 1-2 0v-76.51L175.59 80H224V21.9a5 5 0 1 1 2 0V82h-49.59L146 112.41v75.69zm16 32a5 5 0 1 1-2 0v-99.51L184.59 96H300.1a5 5 0 0 1 3.9-3.9v2.07a3 3 0 0 0 0 5.66v2.07a5 5 0 0 1-3.9-3.9H185.41L162 121.41v98.69zm-144-64a5 5 0 1 1-2 0v-3.51l48-48V48h32V0h2v50H66v55.41l-48 48v2.69zM50 53.9v43.51l-48 48V208h26.1a5 5 0 1 1 0 2H0v-65.41l48-48V53.9a5 5 0 1 1 2 0zm-16 16V89.41l-34 34v-2.82l32-32V69.9a5 5 0 1 1 2 0zM12.1 32a5 5 0 1 1 0 2H9.41L0 43.41V40.6L8.59 32h3.51zm265.8 18a5 5 0 1 1 0-2h18.69l7.41-7.41v2.82L297.41 50H277.9zm-16 160a5 5 0 1 1 0-2H288v-71.41l16-16v2.82l-14 14V210h-28.1zm-208 32a5 5 0 1 1 0-2H64v-22.59L40.59 194H21.9a5 5 0 1 1 0-2H41.41L66 216.59V242H53.9zm150.2 14a5 5 0 1 1 0 2H96v-56.6L56.6 162H37.9a5 5 0 1 1 0-2h19.5L98 200.6V256h106.1zm-150.2 2a5 5 0 1 1 0-2H80v-46.59L48.59 178H21.9a5 5 0 1 1 0-2H49.41L82 208.59V258H53.9zM34 39.8v1.61L9.41 66H0v-2h8.59L32 40.59V0h2v39.8zM2 300.1a5 5 0 0 1 3.9 3.9H3.83A3 3 0 0 0 0 302.17V256h18v48h-2v-46H2v42.1zM34 241v63h-2v-62H0v-2h34v1zM17 18H0v-2h16V0h2v18h-1zm273-2h14v2h-16V0h2v16zm-32 273v15h-2v-14h-14v14h-2v-16h18v1zM0 92.1A5.02 5.02 0 0 1 6 97a5 5 0 0 1-6 4.9v-2.07a3 3 0 1 0 0-5.66V92.1zM80 272h2v32h-2v-32zm37.9 32h-2.07a3 3 0 0 0-5.66 0h-2.07a5 5 0 0 1 9.8 0zM5.9 0A5.02 5.02 0 0 1 0 5.9V3.83A3 3 0 0 0 3.83 0H5.9zm294.2 0h2.07A3 3 0 0 0 304 3.83V5.9a5 5 0 0 1-3.9-5.9zm3.9 300.1v2.07a3 3 0 0 0-1.83 1.83h-2.07a5 5 0 0 1 3.9-3.9zM97 100a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-48 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 96a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-144a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-96 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm96 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-32 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM49 36a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-32 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM33 68a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 240a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm80-176a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 48a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm112 176a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-16 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM17 180a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 16a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0-32a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM17 84a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm32 64a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6z'%3E%3C/path%3E%3C/svg%3E");
-            }
-
-            body{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                padding: 10px;
-            }
-
-            .title_container{
-                width: 90%;
-                margin-bottom: 100px;
-                background: #404757;
-                border-radius: 10px;
-            }
-
-            h1{
-                font-size: 2em;
-                padding: 20px;
-                color: #baf;
-                filter: drop-shadow(0px 0px 2px #000) drop-shadow(0px 0px 4px #baf);
-            }
-
-            h1 a{
-                font-size: 1em;
-                color: #baf;
-            }
-
-            h2{
-                font-size: 1.5em;
-                margin-bottom: 10px;
-                font-style: italic;
-            }
-
-            p{
-                margin-bottom: 5px;
-            }
-
-            .input_container{
-                padding: 10px;
-                margin: 0 0 20px;
-                border: 2px solid #fb9;
-                background: var(--bckgrnd);
-                border-radius: 10px;
-            }
-
-            input[type="color"]{
-                margin: 20px;
-                outline: 4px solid #beb;
-                border-radius: 2px;
-                filter: drop-shadow(0px 0px 1px #000) drop-shadow(0px 0px 4px #beb);
-            }
-
-            #to_work{
-                display: inline-block;
-                padding: 5px;
-                margin: 5px;
-                background: #ffa;
-                color: #000;
-                border-radius: 5px;
-            }
-
-            .range_container{
-                position: relative;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-            }
-
-            .range_container span{
-                position: absolute;
-                z-index: 9;
-                display: inline-block;
-                width: 100%;
-                height: 100%;
-            }
-
-            input[type="range"]{
-                width: 100%;
-            }
-
-            #demo{
-                display: none;
-                width: 30%;
-                padding: 10px;
-                border: 2px solid #fb9;
-                background: var(--bckgrnd);
-                border-radius: 10px;
-            }
-
-            @media (max-width: 500px) {
-
-                h1{
-                   font-size: 1.5em; 
-                }
-
-                h2{
-                   font-size: 1.2em; 
-                }
-
-                #demo{
-                    width: 90%;
-                }
-            }
-
-            #demo p{
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-
-            footer{
-                display: inline-block;
-                width: 100%;
-                padding-top: 50vh;
-            }
-
-            footer a{
-                float: right;
-            }
-
-            footer a svg{
-                width: 50px;
-                fill: #ddd;
-                padding: 7px;
-                border-radius: 25px;
-                background: var(--bckgrnd);
-                cursor: pointer;
-            }
-        </style>
     </head>
 
     <body>
@@ -210,247 +55,5 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
             </a>
         </footer>
-
-        <script>
-
-            // Se declara una constante para conservar el selector de color
-
-            const colorSelector = document.getElementById("colorSelector");
-
-            // Se declara una constante para conservar el botón de análisis
-
-            const toWork = document.getElementById("to_work");
-
-            // Se declara una constante para conservar el elemento donde aparecerá la información
-
-            const demo = document.getElementById("demo");
-
-            // Se construye una red neuronal para detectar el brillo
-
-            const brightnessNN = new brain.NeuralNetwork();
-
-            // Se construye una red neuronal para detectar colores
-
-            const colorNN = new brain.NeuralNetwork();
-
-            // Objetos de entrada para entrenar a las redes
-
-            brightnessNNInputs = [
-
-                // Blanco RGB(255, 255, 255)
-
-                { input:[255/255, 255/255, 255/255], output:{light:1} },
-
-                // Gris claro (192,192,192)
-
-                { input:[192/255, 192/255, 192/255], output:{light:1} },
-
-                // Gris oscuro (64, 64, 64)
-
-                { input:[65/255, 65/255, 65/255], output:{dark:1} },
-
-                // Negro (0, 0, 0)
-
-                { input:[0, 0, 0], output:{dark:1} }
-            ];
-
-            colorNNInputs = [
-
-                // Rojo RGB(255, 0, 0)
-
-                { input:[255/255, 0, 0], output:{red:1} },
-
-                // Rojo RGB(255, 119, 119)
-
-                { input:[255/255, 119/255, 119/255], output:{red:1} },
-
-                // Verde RGB(0, 255, 0)
-
-                { input:[0, 255/255, 0], output:{green:1} },
-
-                // Verde RGB(119, 255, 119)
-
-                { input:[119/255, 255/255, 119/255], output:{green:1} },
-
-                // Azul RGB(0, 0, 255)
-
-                { input:[0, 0, 255/255], output:{blue:1} },
-
-                // Azul RGB(119, 119, 255)
-
-                { input:[119/255, 119/255, 255/255], output:{blue:1} }
-            ];
-
-            // Se entrenan las redes
-
-            brightnessNN.train(brightnessNNInputs);
-
-            colorNN.train(colorNNInputs);
-
-            // Se declara una función para convertir el formato de color hexadecimal en RGB
-
-            const hexToRGB = (hex) => {
-
-                let r = parseInt(hex.slice(1, 3), 16);
-
-                let g = parseInt(hex.slice(3, 5), 16);
-
-                let b = parseInt(hex.slice(5, 7), 16);
-
-                return [r, g, b];
-            }
-
-            // Se exportan las redes ya entrenadas
-
-            const runBrightnessNN = brightnessNN.toFunction();
-
-            const runColorNN = colorNN.toFunction();
-
-            // Se muestran en la consola para usarlas independientemente de la librería brain.js
-
-            console.log(runBrightnessNN.toString());
-
-            console.log(runColorNN.toString());
-
-            // Se declara una función para crear los elementos necesarios que mostrarán la información
-
-            function createElements(txt, value) {
-
-                let container = document.createElement("div");
-
-                container.setAttribute("class", "range_container");
-
-                let span = document.createElement("span");
-
-                let label = document.createElement("label");
-
-                let inputRange = document.createElement("input");
-
-                inputRange.setAttribute("type", "range");
-
-                inputRange.setAttribute("max", "10");
-
-                inputRange.setAttribute("value", value);
-
-                demo.appendChild(container);
-
-                container.appendChild(label);
-
-                label.innerText = txt;
-
-                container.appendChild(span);
-
-                container.appendChild(inputRange);
-            }
-
-            // Se declara una función para crear los elementos conforme a la saturación del color
-
-            function createBars(saturation) {
-
-                // Evaluamos el valor que recibirá la función...
-
-                switch (saturation) {
-
-                    // En caso de que el valor sea "B&W"...
-
-                    case "B&W":
-
-                        // Se crean los elementos y se muestran las barras de claridad y oscuridad con los resultados
-
-                        createElements("Claridad: ", brightnessResult["light"] * 10);
-
-                        createElements("Oscuridad: ", brightnessResult["dark"] * 10);
-
-                    break;
-
-                    // En caso de que el valor sea "hue"...
-
-                    case "hue":
-
-                        // Se crean los elementos y se muestran las barras de claridad y oscuridad con los resultados
-
-                        createElements("Rojo: ", redResult * 10);
-
-                        createElements("Verde: ", greenResult * 10);
-
-                        createElements("Azul: ", blueResult * 10);
-
-                    break;
-                }
-            }
-
-            // Se crea la variable colorResult para usarla más tarde
-
-            colorResult = [];
-
-            // Se crea una escucha de evento para cuando se selecciona un color
-
-            toWork.addEventListener("click", ()=>{
-
-                // Se borra la información por si se ejecutó anteriormente el código
-
-                demo.innerHTML = "";
-
-                // Se declara una variable para conservar el código del color que se analizará
-
-                input = colorSelector.value;
-
-                // Se convierte el valor ingresado
-
-                color = hexToRGB(input);
-
-                // Se entrega el color a la IA de brillo para saber si hay diferencia de colores base
-
-                brightnessResult = runBrightnessNN( [color[0] / 255, color[1] / 255, color[2] / 255] );
-
-                // Se crean los elementos y se muestran las barras de claridad y oscuridad con los resultados
-
-                createBars("B&W");
-
-                demo.style.display = "inline-block";
-
-                // Se divide el resultado entre brillo y oscuridad para saber cuál es mayor
-
-                darker = brightnessResult["dark"] / brightnessResult["light"];
-
-                lighter = brightnessResult["light"] / brightnessResult["dark"];
-
-                // Evaluamos si es falso que la claridad es mayor o igual a 9, así como también, si es falso que la oscuridad es mayor o igual a 30...
-
-                switch (!(lighter >= 9) && !(darker >= 30) ) {
-
-                    // En caso de que alguna sea verdadera (y no falsa, como debería)...
-
-                    case false:
-
-                        // No se hace algo
-
-                    break;
-
-                    default:
-
-                        // Por defecto, se entrega el color a la IA de colores y se conserva el resultado
-
-                        colorResult = runColorNN( [color[0] / 255, color[1] / 255, color[2] / 255] );
-
-                        // Se divide el resultado en colores y se conservan los valores
-
-                        redResult = colorResult["red"];
-
-                        greenResult = colorResult["green"];
-
-                        blueResult = colorResult["blue"];
-
-                        // Declaramos una variable para conservar el valor de verdad resultante de la comparación de cada color primario con porcentajes cercanos al gris
-
-                        isGray = redResult > 0.20 && redResult < 0.40 && greenResult > 0.20 && greenResult < 0.40 && blueResult > 0.20 && blueResult < 0.40;
-
-                        // Si la comparación guardada resulta ser falsa, se crean las barras RGB
-
-                        !isGray ? createBars("hue") : false;
-                    break;
-                }
-            });
-        </script>
     </body>
 </html>
