--- a/ia/index.html
+++ b/ia/index.html
@@ -9,7 +9,7 @@
 
         <meta name="color-scheme" content="dark">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="ia/style.css">
 
         <script src="ia/browser.js"></script>
 
